--- a/MedicamentConsole/MedicamentConsole.csproj
+++ b/MedicamentConsole/MedicamentConsole.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MedicamentBO\MedicamentBO.csproj" />
+  </ItemGroup>
+
 </Project>
